--- a/book/Gemfile
+++ b/book/Gemfile
@@ -2,3 +2,4 @@ source 'https://rubygems.org'
 gem 'compass', '>=0.13.alpha.4'
 gem 'animation-studio', '~>0.1.2'
 gem 'rb-fsevent', '~> 0.9'
+gem 'breakpoint'
